cpp/zad3/szablon/error_log.txt
main.cpp: In function ‘int main()’:
main.cpp:5:14: error: variable ‘std::ifstream plik’ has initializer but incomplete type
    5 | ifstream plik("dane.txt");
      |              ^
